[package]
name = "sunrise-next"
version = "1.1.0"
authors = ["Nathan Osman <nathan@quickmediasolutions.com>"]
description = "Sunrise and sunset calculator"
repository = "https://github.com/nathan-osman/rust-sunrise"
readme = "README.md"
categories = ["date-and-time"]
license = "MIT"
edition = "2021"

[lib]
name = "sunrise"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [] }

[dev-dependencies]
approx = "0.5"
